Add custom output delimiter option